bases/flux-operator/clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: flux-operator-multi-tenancy
spec:
  validationFailureAction: Enforce
  rules:
    - name: serviceAccountNameMustBeSet
      exclude:
        resources:
          namespaces:
            - "flux-giantswarm"
            - "giantswarm"
            - "monitoring"
      match:
        resources:
          kinds:
            - ResourceSet
      validate:
        message: "the .spec.serviceAccountName field is required"
        anyPattern:
        - spec:
            serviceAccountName: "?*"
    - name: fluxInstanceMustBeSingleton
      match:
        resources:
          kinds:
            - FluxInstance
      validate:
        message: "FluxInstances allowed only in the `flux-giantswarm` namespace"
        pattern:
          metadata:
            namespace: "flux-giantswarm"
