tests/bases/flux-operator-kyverno/require-serviceaccount/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-serviceaccount
policies:
  - ../../../../bases/flux-operator/clusterpolicy.yaml
resources:
  - resources.yaml
results:
  - policy: flux-operator-multi-tenancy
    rule: serviceAccountNameMustBeSet
    resources:
    - ns1/test
    kind: ResourceSet
    result: fail
  - policy: flux-operator-multi-tenancy
    rule: serviceAccountNameMustBeSet
    resources:
    - ns2/test
    kind: ResourceSet
    result: pass
